parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declaration_list
Rule 2     var_declaration -> type_specifier ID SEMICOLON
Rule 3     var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON
Rule 4     var_declaration -> type_specifier ID EQUAL var SEMICOLON
Rule 5     var_declaration -> type_specifier ID COMMA ID SEMICOLON
Rule 6     var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
Rule 7     fun_declaration -> type_specifier ID LPAREN params RPAREN compount_stmt
Rule 8     params -> param_list
Rule 9     params -> VOID
Rule 10    param_list -> param_list COMMA param
Rule 11    param_list -> param
Rule 12    param_list -> empty
Rule 13    type_specifier -> INT
Rule 14    type_specifier -> VOID
Rule 15    type_specifier -> STRING
Rule 16    param -> type_specifier ID
Rule 17    param -> type_specifier ID LBRACKET RBRACKET
Rule 18    compount_stmt -> LBLOCK local_declarations statement_list RBLOCK
Rule 19    local_declarations -> local_declarations var_declaration
Rule 20    local_declarations -> empty
Rule 21    statement_list -> statement_list statement
Rule 22    statement_list -> empty
Rule 23    statement -> expression_stmt
Rule 24    statement -> compount_stmt
Rule 25    statement -> selection_stmt
Rule 26    statement -> iteration_stmt
Rule 27    statement -> return_stmt
Rule 28    expression_stmt -> expression SEMICOLON
Rule 29    expression_stmt -> SEMICOLON
Rule 30    expression_stmt -> COUT L_SHIFT QUOTES ID QUOTES SEMICOLON
Rule 31    expression_stmt -> COUT L_SHIFT QUOTES ID QUOTES L_SHIFT ENDL SEMICOLON
Rule 32    expression_stmt -> COUT L_SHIFT STRING SEMICOLON
Rule 33    expression_stmt -> COUT L_SHIFT STRING L_SHIFT ENDL SEMICOLON
Rule 34    expression_stmt -> COUT L_SHIFT var SEMICOLON
Rule 35    expression_stmt -> COUT L_SHIFT var L_SHIFT ENDL SEMICOLON
Rule 36    expression_stmt -> COUT L_SHIFT var L_SHIFT var SEMICOLON
Rule 37    expression_stmt -> COUT L_SHIFT var L_SHIFT var L_SHIFT ENDL SEMICOLON
Rule 38    expression_stmt -> CIN R_SHIFT var SEMICOLON
Rule 39    expression_stmt -> CIN R_SHIFT var R_SHIFT var SEMICOLON
Rule 40    expression_stmt -> ID PLUSPLUS
Rule 41    expression_stmt -> PLUSPLUS ID
Rule 42    expression_stmt -> ID MINUSMINUS
Rule 43    expression_stmt -> MINUSMINUS ID
Rule 44    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 45    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 46    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 47    iteration_stmt -> <empty>
Rule 48    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON var MINUSMINUS RPAREN statement
Rule 49    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON expression RPAREN statement
Rule 50    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON var PLUSPLUS RPAREN statement
Rule 51    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON PLUSPLUS var RPAREN statement
Rule 52    iteration_stmt -> FOR LPAREN var SEMICOLON expression SEMICOLON MINUSMINUS var RPAREN statement
Rule 53    return_stmt -> RETURN SEMICOLON
Rule 54    return_stmt -> RETURN expression SEMICOLON
Rule 55    expression -> var EQUAL expression
Rule 56    expression -> simple_expression
Rule 57    declaration_list -> declaration_list declaration
Rule 58    declaration_list -> declaration
Rule 59    declaration -> var_declaration
Rule 60    declaration -> HASH INCLUDE LESS_THAN ID GREATER_THAN
Rule 61    declaration -> fun_declaration
Rule 62    declaration -> USING NAMESPACE STD SEMICOLON
Rule 63    var -> ID
Rule 64    var -> ID LBRACKET expression RBRACKET
Rule 65    simple_expression -> additive_expression relop additive_expression
Rule 66    simple_expression -> additive_expression
Rule 67    relop -> LESS_THAN
Rule 68    relop -> LESS_OR_EQUAL
Rule 69    relop -> GREATER_THAN
Rule 70    relop -> GREATEREQUAL
Rule 71    relop -> DEQUAL
Rule 72    relop -> DISTINT
Rule 73    relop -> QUOTES
Rule 74    additive_expression -> additive_expression addop term
Rule 75    additive_expression -> term
Rule 76    addop -> PLUS
Rule 77    addop -> MINUS
Rule 78    term -> term mulop factor
Rule 79    term -> factor
Rule 80    mulop -> TIMES
Rule 81    mulop -> DIVIDE
Rule 82    factor -> LPAREN expression RPAREN
Rule 83    factor -> var
Rule 84    factor -> call
Rule 85    factor -> NUMBER
Rule 86    call -> ID LPAREN args RPAREN
Rule 87    args -> args_list
Rule 88    args -> empty
Rule 89    args_list -> args_list COMMA expression
Rule 90    args_list -> expression
Rule 91    empty -> <empty>

Terminals, with rules where they appear

CIN                  : 38 39
COMMA                : 5 10 89
COUT                 : 30 31 32 33 34 35 36 37
DEQUAL               : 71
DISTINT              : 72
DIVIDE               : 81
ELSE                 : 45
ENDL                 : 31 33 35 37
EQUAL                : 3 4 55
FOR                  : 48 49 50 51 52
GREATEREQUAL         : 70
GREATER_THAN         : 60 69
HASH                 : 60
ID                   : 2 3 4 5 5 6 7 16 17 30 31 40 41 42 43 60 63 64 86
IF                   : 44 45
INCLUDE              : 60
INT                  : 13
LBLOCK               : 18
LBRACKET             : 6 17 64
LESS_OR_EQUAL        : 68
LESS_THAN            : 60 67
LPAREN               : 7 44 45 46 48 49 50 51 52 82 86
L_SHIFT              : 30 31 31 32 33 33 34 35 35 36 36 37 37 37
MINUS                : 77
MINUSMINUS           : 42 43 48 52
NAMESPACE            : 62
NUMBER               : 3 6 85
PLUS                 : 76
PLUSPLUS             : 40 41 50 51
QUOTES               : 30 30 31 31 73
RBLOCK               : 18
RBRACKET             : 6 17 64
RETURN               : 53 54
RPAREN               : 7 44 45 46 48 49 50 51 52 82 86
R_SHIFT              : 38 39 39
SEMICOLON            : 2 3 4 5 6 28 29 30 31 32 33 34 35 36 37 38 39 48 48 49 49 50 50 51 51 52 52 53 54 62
STD                  : 62
STRING               : 15 32 33
TIMES                : 80
USING                : 62
VOID                 : 9 14
WHILE                : 46
error                : 

Nonterminals, with rules where they appear

additive_expression  : 65 65 66 74
addop                : 74
args                 : 86
args_list            : 87 89
call                 : 84
compount_stmt        : 7 24
declaration          : 57 58
declaration_list     : 1 57
empty                : 12 20 22 88
expression           : 28 44 45 46 48 49 49 50 51 52 54 55 64 82 89 90
expression_stmt      : 23
factor               : 78 79
fun_declaration      : 61
iteration_stmt       : 26
local_declarations   : 18 19
mulop                : 78
param                : 10 11
param_list           : 8 10
params               : 7
program              : 0
relop                : 65
return_stmt          : 27
selection_stmt       : 25
simple_expression    : 56
statement            : 21 44 45 45 46 48 49 50 51 52
statement_list       : 18 21
term                 : 74 75 78
type_specifier       : 2 3 4 5 6 7 16 17
var                  : 4 34 35 36 36 37 37 38 39 39 48 48 49 50 50 51 51 52 52 55 83
var_declaration      : 19 59

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declaration_list
    (57) declaration_list -> . declaration_list declaration
    (58) declaration_list -> . declaration
    (59) declaration -> . var_declaration
    (60) declaration -> . HASH INCLUDE LESS_THAN ID GREATER_THAN
    (61) declaration -> . fun_declaration
    (62) declaration -> . USING NAMESPACE STD SEMICOLON
    (2) var_declaration -> . type_specifier ID SEMICOLON
    (3) var_declaration -> . type_specifier ID EQUAL NUMBER SEMICOLON
    (4) var_declaration -> . type_specifier ID EQUAL var SEMICOLON
    (5) var_declaration -> . type_specifier ID COMMA ID SEMICOLON
    (6) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (7) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (13) type_specifier -> . INT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . STRING

    HASH            shift and go to state 5
    USING           shift and go to state 7
    INT             shift and go to state 9
    VOID            shift and go to state 10
    STRING          shift and go to state 11

    program                        shift and go to state 1
    declaration_list               shift and go to state 2
    declaration                    shift and go to state 3
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 6
    type_specifier                 shift and go to state 8

state 1

    (0) S' -> program .



state 2

    (1) program -> declaration_list .
    (57) declaration_list -> declaration_list . declaration
    (59) declaration -> . var_declaration
    (60) declaration -> . HASH INCLUDE LESS_THAN ID GREATER_THAN
    (61) declaration -> . fun_declaration
    (62) declaration -> . USING NAMESPACE STD SEMICOLON
    (2) var_declaration -> . type_specifier ID SEMICOLON
    (3) var_declaration -> . type_specifier ID EQUAL NUMBER SEMICOLON
    (4) var_declaration -> . type_specifier ID EQUAL var SEMICOLON
    (5) var_declaration -> . type_specifier ID COMMA ID SEMICOLON
    (6) var_declaration -> . type_specifier ID LBRACKET NUMBER RBRACKET SEMICOLON
    (7) fun_declaration -> . type_specifier ID LPAREN params RPAREN compount_stmt
    (13) type_specifier -> . INT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . STRING

    $end            reduce using rule 1 (program -> declaration_list .)
    HASH            shift and go to state 5
    USING           shift and go to state 7
    INT             shift and go to state 9
    VOID            shift and go to state 10
    STRING          shift and go to state 11

    declaration                    shift and go to state 12
    var_declaration                shift and go to state 4
    fun_declaration                shift and go to state 6
    type_specifier                 shift and go to state 8

state 3

    (58) declaration_list -> declaration .

    HASH            reduce using rule 58 (declaration_list -> declaration .)
    USING           reduce using rule 58 (declaration_list -> declaration .)
    INT             reduce using rule 58 (declaration_list -> declaration .)
    VOID            reduce using rule 58 (declaration_list -> declaration .)
    STRING          reduce using rule 58 (declaration_list -> declaration .)
    $end            reduce using rule 58 (declaration_list -> declaration .)


state 4

    (59) declaration -> var_declaration .

    HASH            reduce using rule 59 (declaration -> var_declaration .)
    USING           reduce using rule 59 (declaration -> var_declaration .)
    INT             reduce using rule 59 (declaration -> var_declaration .)
    VOID            reduce using rule 59 (declaration -> var_declaration .)
    STRING          reduce using rule 59 (declaration -> var_declaration .)
    $end            reduce using rule 59 (declaration -> var_declaration .)


state 5

    (60) declaration -> HASH . INCLUDE LESS_THAN ID GREATER_THAN

    INCLUDE         shift and go to state 13


state 6

    (61) declaration -> fun_declaration .

    HASH            reduce using rule 61 (declaration -> fun_declaration .)
    USING           reduce using rule 61 (declaration -> fun_declaration .)
    INT             reduce using rule 61 (declaration -> fun_declaration .)
    VOID            reduce using rule 61 (declaration -> fun_declaration .)
    STRING          reduce using rule 61 (declaration -> fun_declaration .)
    $end            reduce using rule 61 (declaration -> fun_declaration .)


state 7

    (62) declaration -> USING . NAMESPACE STD SEMICOLON

    NAMESPACE       shift and go to state 14


state 8

    (2) var_declaration -> type_specifier . ID SEMICOLON
    (3) var_declaration -> type_specifier . ID EQUAL NUMBER SEMICOLON
    (4) var_declaration -> type_specifier . ID EQUAL var SEMICOLON
    (5) var_declaration -> type_specifier . ID COMMA ID SEMICOLON
    (6) var_declaration -> type_specifier . ID LBRACKET NUMBER RBRACKET SEMICOLON
    (7) fun_declaration -> type_specifier . ID LPAREN params RPAREN compount_stmt

    ID              shift and go to state 15


state 9

    (13) type_specifier -> INT .

    ID              reduce using rule 13 (type_specifier -> INT .)


state 10

    (14) type_specifier -> VOID .

    ID              reduce using rule 14 (type_specifier -> VOID .)


state 11

    (15) type_specifier -> STRING .

    ID              reduce using rule 15 (type_specifier -> STRING .)


state 12

    (57) declaration_list -> declaration_list declaration .

    HASH            reduce using rule 57 (declaration_list -> declaration_list declaration .)
    USING           reduce using rule 57 (declaration_list -> declaration_list declaration .)
    INT             reduce using rule 57 (declaration_list -> declaration_list declaration .)
    VOID            reduce using rule 57 (declaration_list -> declaration_list declaration .)
    STRING          reduce using rule 57 (declaration_list -> declaration_list declaration .)
    $end            reduce using rule 57 (declaration_list -> declaration_list declaration .)


state 13

    (60) declaration -> HASH INCLUDE . LESS_THAN ID GREATER_THAN

    LESS_THAN       shift and go to state 16


state 14

    (62) declaration -> USING NAMESPACE . STD SEMICOLON

    STD             shift and go to state 17


state 15

    (2) var_declaration -> type_specifier ID . SEMICOLON
    (3) var_declaration -> type_specifier ID . EQUAL NUMBER SEMICOLON
    (4) var_declaration -> type_specifier ID . EQUAL var SEMICOLON
    (5) var_declaration -> type_specifier ID . COMMA ID SEMICOLON
    (6) var_declaration -> type_specifier ID . LBRACKET NUMBER RBRACKET SEMICOLON
    (7) fun_declaration -> type_specifier ID . LPAREN params RPAREN compount_stmt

    SEMICOLON       shift and go to state 18
    EQUAL           shift and go to state 19
    COMMA           shift and go to state 20
    LBRACKET        shift and go to state 21
    LPAREN          shift and go to state 22


state 16

    (60) declaration -> HASH INCLUDE LESS_THAN . ID GREATER_THAN

    ID              shift and go to state 23


state 17

    (62) declaration -> USING NAMESPACE STD . SEMICOLON

    SEMICOLON       shift and go to state 24


state 18

    (2) var_declaration -> type_specifier ID SEMICOLON .

    HASH            reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    USING           reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    INT             reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    VOID            reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    STRING          reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    $end            reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    RBLOCK          reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    SEMICOLON       reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    COUT            reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    CIN             reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    ID              reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    PLUSPLUS        reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    MINUSMINUS      reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    LBLOCK          reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    IF              reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    WHILE           reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    FOR             reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    RETURN          reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    LPAREN          reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)
    NUMBER          reduce using rule 2 (var_declaration -> type_specifier ID SEMICOLON .)


state 19

    (3) var_declaration -> type_specifier ID EQUAL . NUMBER SEMICOLON
    (4) var_declaration -> type_specifier ID EQUAL . var SEMICOLON
    (63) var -> . ID
    (64) var -> . ID LBRACKET expression RBRACKET

    NUMBER          shift and go to state 26
    ID              shift and go to state 25

    var                            shift and go to state 27

state 20

    (5) var_declaration -> type_specifier ID COMMA . ID SEMICOLON

    ID              shift and go to state 28


state 21

    (6) var_declaration -> type_specifier ID LBRACKET . NUMBER RBRACKET SEMICOLON

    NUMBER          shift and go to state 29


state 22

    (7) fun_declaration -> type_specifier ID LPAREN . params RPAREN compount_stmt
    (8) params -> . param_list
    (9) params -> . VOID
    (10) param_list -> . param_list COMMA param
    (11) param_list -> . param
    (12) param_list -> . empty
    (16) param -> . type_specifier ID
    (17) param -> . type_specifier ID LBRACKET RBRACKET
    (91) empty -> .
    (13) type_specifier -> . INT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . STRING

    VOID            shift and go to state 33
    COMMA           reduce using rule 91 (empty -> .)
    RPAREN          reduce using rule 91 (empty -> .)
    INT             shift and go to state 9
    STRING          shift and go to state 11

    type_specifier                 shift and go to state 30
    params                         shift and go to state 31
    param_list                     shift and go to state 32
    param                          shift and go to state 34
    empty                          shift and go to state 35

state 23

    (60) declaration -> HASH INCLUDE LESS_THAN ID . GREATER_THAN

    GREATER_THAN    shift and go to state 36


state 24

    (62) declaration -> USING NAMESPACE STD SEMICOLON .

    HASH            reduce using rule 62 (declaration -> USING NAMESPACE STD SEMICOLON .)
    USING           reduce using rule 62 (declaration -> USING NAMESPACE STD SEMICOLON .)
    INT             reduce using rule 62 (declaration -> USING NAMESPACE STD SEMICOLON .)
    VOID            reduce using rule 62 (declaration -> USING NAMESPACE STD SEMICOLON .)
    STRING          reduce using rule 62 (declaration -> USING NAMESPACE STD SEMICOLON .)
    $end            reduce using rule 62 (declaration -> USING NAMESPACE STD SEMICOLON .)


state 25

    (63) var -> ID .
    (64) var -> ID . LBRACKET expression RBRACKET

    SEMICOLON       reduce using rule 63 (var -> ID .)
    L_SHIFT         reduce using rule 63 (var -> ID .)
    R_SHIFT         reduce using rule 63 (var -> ID .)
    RPAREN          reduce using rule 63 (var -> ID .)
    LBRACKET        shift and go to state 37


state 26

    (3) var_declaration -> type_specifier ID EQUAL NUMBER . SEMICOLON

    SEMICOLON       shift and go to state 38


state 27

    (4) var_declaration -> type_specifier ID EQUAL var . SEMICOLON

    SEMICOLON       shift and go to state 39


state 28

    (5) var_declaration -> type_specifier ID COMMA ID . SEMICOLON

    SEMICOLON       shift and go to state 40


state 29

    (6) var_declaration -> type_specifier ID LBRACKET NUMBER . RBRACKET SEMICOLON

    RBRACKET        shift and go to state 41


state 30

    (16) param -> type_specifier . ID
    (17) param -> type_specifier . ID LBRACKET RBRACKET

    ID              shift and go to state 42


state 31

    (7) fun_declaration -> type_specifier ID LPAREN params . RPAREN compount_stmt

    RPAREN          shift and go to state 43


state 32

    (8) params -> param_list .
    (10) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 8 (params -> param_list .)
    COMMA           shift and go to state 44


state 33

    (9) params -> VOID .
    (14) type_specifier -> VOID .

    RPAREN          reduce using rule 9 (params -> VOID .)
    ID              reduce using rule 14 (type_specifier -> VOID .)


state 34

    (11) param_list -> param .

    COMMA           reduce using rule 11 (param_list -> param .)
    RPAREN          reduce using rule 11 (param_list -> param .)


state 35

    (12) param_list -> empty .

    COMMA           reduce using rule 12 (param_list -> empty .)
    RPAREN          reduce using rule 12 (param_list -> empty .)


state 36

    (60) declaration -> HASH INCLUDE LESS_THAN ID GREATER_THAN .

    HASH            reduce using rule 60 (declaration -> HASH INCLUDE LESS_THAN ID GREATER_THAN .)
    USING           reduce using rule 60 (declaration -> HASH INCLUDE LESS_THAN ID GREATER_THAN .)
    INT             reduce using rule 60 (declaration -> HASH INCLUDE LESS_THAN ID GREATER_THAN .)
    VOID            reduce using rule 60 (declaration -> HASH INCLUDE LESS_THAN ID GREATER_THAN .)
    STRING          reduce using rule 60 (declaration -> HASH INCLUDE LESS_THAN ID GREATER_THAN .)
    $end            reduce using rule 60 (declaration -> HASH INCLUDE LESS_THAN ID GREATER_THAN .)


state 37

    (64) var -> ID LBRACKET . expression RBRACKET
    (55) expression -> . var EQUAL expression
    (56) expression -> . simple_expression
    (63) var -> . ID
    (64) var -> . ID LBRACKET expression RBRACKET
    (65) simple_expression -> . additive_expression relop additive_expression
    (66) simple_expression -> . additive_expression
    (74) additive_expression -> . additive_expression addop term
    (75) additive_expression -> . term
    (78) term -> . term mulop factor
    (79) term -> . factor
    (82) factor -> . LPAREN expression RPAREN
    (83) factor -> . var
    (84) factor -> . call
    (85) factor -> . NUMBER
    (86) call -> . ID LPAREN args RPAREN

    ID              shift and go to state 45
    LPAREN          shift and go to state 52
    NUMBER          shift and go to state 54

    expression                     shift and go to state 46
    var                            shift and go to state 47
    simple_expression              shift and go to state 48
    additive_expression            shift and go to state 49
    term                           shift and go to state 50
    factor                         shift and go to state 51
    call                           shift and go to state 53

state 38

    (3) var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .

    HASH            reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    USING           reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    INT             reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    VOID            reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    STRING          reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    $end            reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    RBLOCK          reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    SEMICOLON       reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    COUT            reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    CIN             reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    ID              reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    PLUSPLUS        reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    MINUSMINUS      reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    LBLOCK          reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    IF              reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    WHILE           reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    FOR             reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    RETURN          reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    LPAREN          reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)
    NUMBER          reduce using rule 3 (var_declaration -> type_specifier ID EQUAL NUMBER SEMICOLON .)


state 39

    (4) var_declaration -> type_specifier ID EQUAL var SEMICOLON .

    HASH            reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    USING           reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    INT             reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    VOID            reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    STRING          reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    $end            reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    RBLOCK          reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    SEMICOLON       reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    COUT            reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    CIN             reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    ID              reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    PLUSPLUS        reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    MINUSMINUS      reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    LBLOCK          reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    IF              reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    WHILE           reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    FOR             reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    RETURN          reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    LPAREN          reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)
    NUMBER          reduce using rule 4 (var_declaration -> type_specifier ID EQUAL var SEMICOLON .)


state 40

    (5) var_declaration -> type_specifier ID COMMA ID SEMICOLON .

    HASH            reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    USING           reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    INT             reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    VOID            reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    STRING          reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    $end            reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    RBLOCK          reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    SEMICOLON       reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    COUT            reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    CIN             reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    ID              reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    PLUSPLUS        reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    MINUSMINUS      reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    LBLOCK          reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    IF              reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    WHILE           reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    FOR             reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    RETURN          reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    LPAREN          reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)
    NUMBER          reduce using rule 5 (var_declaration -> type_specifier ID COMMA ID SEMICOLON .)


state 41

    (6) var_declaration -> type_specifier ID LBRACKET NUMBER RBRACKET . SEMICOLON

    SEMICOLON       shift and go to state 55


state 42

    (16) param -> type_specifier ID .
    (17) param -> type_specifier ID . LBRACKET RBRACKET

    COMMA           reduce using rule 16 (param -> type_specifier ID .)
    RPAREN          reduce using rule 16 (param -> type_specifier ID .)
    LBRACKET        shift and go to state 56


state 43

    (7) fun_declaration -> type_specifier ID LPAREN params RPAREN . compount_stmt
    (18) compount_stmt -> . LBLOCK local_declarations statement_list RBLOCK

    LBLOCK          shift and go to state 58

    compount_stmt                  shift and go to state 57

state 44

    (10) param_list -> param_list COMMA . param
    (16) param -> . type_specifier ID
    (17) param -> . type_specifier ID LBRACKET RBRACKET
    (13) type_specifier -> . INT
    (14) type_specifier -> . VOID
    (15) type_specifier -> . STRING

    INT             shift and go to state 9
    VOID            shift and go to state 10
    STRING          shift and go to state 11

    param                          shift and go to state 59
    type_specifier                 shift and go to state 30

state 45

    (63) var -> ID .
    (64) var -> ID . LBRACKET expression RBRACKET
    (86) call -> ID . LPAREN args RPAREN

    EQUAL           reduce using rule 63 (var -> ID .)
    TIMES           reduce using rule 63 (var -> ID .)
    DIVIDE          reduce using rule 63 (var -> ID .)
    LESS_THAN       reduce using rule 63 (var -> ID .)
    LESS_OR_EQUAL   reduce using rule 63 (var -> ID .)
    GREATER_THAN    reduce using rule 63 (var -> ID .)
    GREATEREQUAL    reduce using rule 63 (var -> ID .)
    DEQUAL          reduce using rule 63 (var -> ID .)
    DISTINT         reduce using rule 63 (var -> ID .)
    QUOTES          reduce using rule 63 (var -> ID .)
    PLUS            reduce using rule 63 (var -> ID .)
    MINUS           reduce using rule 63 (var -> ID .)
    RBRACKET        reduce using rule 63 (var -> ID .)
    RPAREN          reduce using rule 63 (var -> ID .)
    COMMA           reduce using rule 63 (var -> ID .)
    SEMICOLON       reduce using rule 63 (var -> ID .)
    MINUSMINUS      reduce using rule 63 (var -> ID .)
    PLUSPLUS        reduce using rule 63 (var -> ID .)
    LBRACKET        shift and go to state 37
    LPAREN          shift and go to state 60


state 46

    (64) var -> ID LBRACKET expression . RBRACKET

    RBRACKET        shift and go to state 61


state 47

    (55) expression -> var . EQUAL expression
    (83) factor -> var .

    EQUAL           shift and go to state 62
    TIMES           reduce using rule 83 (factor -> var .)
    DIVIDE          reduce using rule 83 (factor -> var .)
    LESS_THAN       reduce using rule 83 (factor -> var .)
    LESS_OR_EQUAL   reduce using rule 83 (factor -> var .)
    GREATER_THAN    reduce using rule 83 (factor -> var .)
    GREATEREQUAL    reduce using rule 83 (factor -> var .)
    DEQUAL          reduce using rule 83 (factor -> var .)
    DISTINT         reduce using rule 83 (factor -> var .)
    QUOTES          reduce using rule 83 (factor -> var .)
    PLUS            reduce using rule 83 (factor -> var .)
    MINUS           reduce using rule 83 (factor -> var .)
    RBRACKET        reduce using rule 83 (factor -> var .)
    RPAREN          reduce using rule 83 (factor -> var .)
    COMMA           reduce using rule 83 (factor -> var .)
    SEMICOLON       reduce using rule 83 (factor -> var .)


state 48

    (56) expression -> simple_expression .

    RBRACKET        reduce using rule 56 (expression -> simple_expression .)
    RPAREN          reduce using rule 56 (expression -> simple_expression .)
    COMMA           reduce using rule 56 (expression -> simple_expression .)
    SEMICOLON       reduce using rule 56 (expression -> simple_expression .)


state 49

    (65) simple_expression -> additive_expression . relop additive_expression
    (66) simple_expression -> additive_expression .
    (74) additive_expression -> additive_expression . addop term
    (67) relop -> . LESS_THAN
    (68) relop -> . LESS_OR_EQUAL
    (69) relop -> . GREATER_THAN
    (70) relop -> . GREATEREQUAL
    (71) relop -> . DEQUAL
    (72) relop -> . DISTINT
    (73) relop -> . QUOTES
    (76) addop -> . PLUS
    (77) addop -> . MINUS
